--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
     padding: 1em;
     color: var(--branco-principal);
     display: block;
+    text-decoration: none;
     margin-bottom: 1em;
 }
 .container {
